# rikos

./: .gitignore  Cargo.toml  Cargo.toml.bak  build.rs  justfile  riscv-build-rs  x86-build-rs
asm/: boot.asm  linker.ld
image/boot/grub/: grub.cfg
kernel/: Cargo.toml
kernel/asm/: boot.asm  long_mode_init.asm
kernel/src/: lib.rs  panic.rs  test.rs
kernel/src/interrupt/: apic.rs  handlers.rs  input.rs  mod.rs
kernel/src/io/: keyboard.rs  mod.rs  serial.rs  timer.rs  vga.rs
kernel/src/mem/: frame.rs  gdt.rs  mod.rs
kernel/src/os/: mod.rs
kernel/src/task/: executor.rs  keyboard.rs  mod.rs
os/: Cargo.toml
os/src/: keyboard.rs  lib.rs  os.rs  test.rs
riscv-kernel/: Cargo.toml
riscv-kernel/src/: lib.rs  panic.rs  print.rs
riscv-kernel/src/asm/: boot.S
src/: lib.rs  main.rs  panic.rs  test.rs
src/interrupt/: apic.rs  exception.rs  handlers.rs  mod.rs
src/io/: keyboard.rs  mod.rs  serial.rs  vga.rs
src/mem/: allocator.rs  gdt.rs  remap.rs
src/os/: keyboard.rs  mod.rs
