[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = { path = "../kernel" }
pc-keyboard = "0.7.0"
spin = "0.9.8"

[dependencies.conquer-once]
version = "0.4.0"
default-features = false

[lib]
name = "os"
path = "src/lib.rs"
crate-type = ["staticlib"]

